--- a/projects/customer_segments/customer_segments.ipynb
+++ b/projects/customer_segments/customer_segments.ipynb
@@ -35,11 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wholesale customers dataset has 440 samples with 6 features each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -56,9 +62,9 @@
     "try:\n",
     "    data = pd.read_csv(\"customers.csv\")\n",
     "    data.drop(['Region', 'Channel'], axis = 1, inplace = True)\n",
-    "    print \"Wholesale customers dataset has {} samples with {} features each.\".format(*data.shape)\n",
+    "    print(\"Wholesale customers dataset has {} samples with {} features each.\".format(*data.shape))\n",
     "except:\n",
-    "    print \"Dataset could not be loaded. Is the dataset missing?\""
+    "    print(\"Dataset could not be loaded. Is the dataset missing?\")"
    ]
   },
   {
@@ -775,21 +781,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
